misc ui clean up on dashboard - changed heading to black, fixed alignment issue

--- a/src/main/theme/less/variables.less
+++ b/src/main/theme/less/variables.less
@@ -695,7 +695,7 @@
 //** Background color on `.list-group-item`
 @list-group-bg:                 #fff;
 //** `.list-group-item` border color
-@list-group-border:            @gray-dark;
+@list-group-border:            @table-border-color;
 //** List group border radius
 @list-group-border-radius:      @border-radius-base;
 
